# AsyncOS

./: Cargo.toml  Makefile  README.md  TODO.md
.cargo/: config
doc/: BOOTSTRAPPING.md
src/: lib.rs  vga.rs
src/acpi/: madt.rs  mod.rs  rsdp.rs  rsdt.rs  table.rs  tables.rs
src/arch/x86_64/: bootstrap.asm  bootstrap.s  linker.ld  multiboot.asm
src/boot/: efi-main.c  grub.cfg  linker.ld
src/memory/: mod.rs  paging.rs
src/processor/: lapic.rs  mod.rs
